--- a/_posts/2021-09-08-ensayo1.md
+++ b/_posts/2021-09-08-ensayo1.md
@@ -1,14 +1,11 @@
 ---
 layout: post
-title: "Vuestro primer ensayo"
+title: "Ensayo 1. Archivo digital Gabriel García Márquez (versión antigua a modificar)"
 date: 2021-09-08
 author: Noah Beal
 ---
-	
-## Recuerda la vida de Gabriel Garcia Marquéz
-	
-	
-	
+
+<!--SAT: Esta versión es la primera que hiciste que te dije que debía modificarse y ser mucho más específica. Este proyecto no se podría llevar nunca a cabo en el transcurso de un año. La versión así como la tienes no contará para el Portfolio final.  --> 
 	
 Después de pasar mucho tiempo revisando los diferentes tipos de proyectos de humanidades digitales, decidí crear mi propio proyecto. Siempre me ha interesado la literatura española y he estudiado a varios escritores en la escuela, así que quería crear un archivo digital de un escritor famoso específico. Para hacer esto, tuve que pensar en un escritor español que fuera perfecto para el archivo. Gabriel García Márquez fue mi primera opción. Elegí a Márquez por el impacto que tuvo en España y en el mundo. Escribió muchas novelas, memorias y cuentos diferentes que trataban temas de amor, soledad, la muerte entre otros muchos. Mostró mucha pasión y emoción en su escritura, lo que le conectó con millones de personas a través  de  su literatura. Su obra más famosa, titulada Cien años de soledad, introdujo a su audiencia al realismo mágico, un género literario que utiliza elementos mágicos y fantásticos en el mundo real. La invención de este nuevo género fue muy importante para la literatura, ya que el público ahora puede entender una historia de una manera completamente nueva. Márquez está considerado como uno de los mejores escritores de todos los tiempos.
 
